--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,22 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "db.js",
+  "type": "module",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^5.1.0",
-    "sqlite3": "^5.1.7"
+    "cors": "^2.8.5",
+    "sqlite3": "^5.1.7",
+    "sqlite": "^4.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
