--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0",
     "cors": "^2.8.5",
-    "sqlite3": "^5.1.7",
-    "sqlite": "^4.1.1"
+    "express": "^5.1.0",
+    "multer": "^2.0.2",
+    "sqlite": "^4.1.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
