--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^5.1.0",
-    "multer": "^2.0.2",
+    "cors": "^2.8.5",
+    "sqlite3": "^5.1.7",
     "sqlite": "^4.1.1",
-    "sqlite3": "^5.1.7"
+    "multer": "^1.4.5-lts.1" 
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
