teste depois da desgraça2

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,7 @@
-REACT_APP_BACKEND_URL=https://trip-finder-25.preview.emergentagent.com
+# URL do backend no Render
+REACT_APP_API_URL=https://bookish-broccoli-nue4.onrender.com
+
+# Configurações locais
 WDS_SOCKET_PORT=443
 REACT_APP_ENABLE_VISUAL_EDITS=true
 ENABLE_HEALTH_CHECK=false
