MInhhaa vida e triste

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
 # URL do backend no Render
-REACT_APP_API_URL=https://bookish-broccoli-nue4.onrender.com
+REACT_APP_API_URL=https://bellarenda.vps-kinghost.net/api
 
 # Configurações locais
 WDS_SOCKET_PORT=443
